--- a/docs/15_chapter_11-1.mdx
+++ b/docs/15_chapter_11-1.mdx
@@ -2,9 +2,9 @@
 sidebar_position: 1
 ---
 
-import Authors from './Authors.tsx';
+import Authors from "./Authors.tsx";
 
-# 11 장 API 리펙터링 上
+# 11 장 API 리팩터링 上
 
 <Authors bookLeader="Woongjo-Yoo" />
 
@@ -16,12 +16,12 @@ API는 이 블록들을 끼워 맞추는 연결부
 
 #### 살펴볼 것들
 
-* `데이터의 갱신 / 조회` 를 분리하자
-* 데이터 구조가 함수 사이를 건너다니면서 필요 이상으로 분해될 때는 객체 통째로 넘기기
-* 매개변수를 질의 함수로 바꾸기 / 질의 함수를 매개변수로 바꾸기
-* 최대한 클래스의 세터를 제거하기
-* 클래스의 생성자만으로 부족할 땐 팩토리 패턴을 사용하기
-* 함수를 명령으로 / 명령을 함수로 바꾸기
+- `데이터의 갱신 / 조회` 를 분리하자
+- 데이터 구조가 함수 사이를 건너다니면서 필요 이상으로 분해될 때는 객체 통째로 넘기기
+- 매개변수를 질의 함수로 바꾸기 / 질의 함수를 매개변수로 바꾸기
+- 최대한 클래스의 세터를 제거하기
+- 클래스의 생성자만으로 부족할 땐 팩토리 패턴을 사용하기
+- 함수를 명령으로 / 명령을 함수로 바꾸기
 
 ## 1. 질의 함수와 변경 함수 분리하기
 
@@ -42,7 +42,7 @@ function sendBill() {
 }
 ```
 
-외부에서 관찰할 수 있는 겉보기 부수효과(Observable Side Effect) 가 전혀 없이 값을 반환해주는 함수를 추구해야한다. 
+외부에서 관찰할 수 있는 겉보기 부수효과(Observable Side Effect) 가 전혀 없이 값을 반환해주는 함수를 추구해야한다.
 그러면 언제나 원하는 만큼 호출해도 아무런 문제가 없다. 테스트하기도 쉽다. 즉, 이용할 때 신경 쓸 거리가 매우 적다.
 
 이를 위한 방법 중 하나가 `질의 함수(읽기 함수)는 모두 부수효과가 없어야 한다 (Command-Query Seperation)`는 규칙을 따르는 것!
@@ -52,15 +52,15 @@ function sendBill() {
 1. 대상 함수를 복제하고 질의 목적에 충실한 이름을 짓는다
 2. 새 질의 함수에서 부수효과를 모두 제거한다
 3. 정적 검사를 수행한다
-4. 원래 함수를 호출하는 곳을 모두 찾아낸다. 호출하는 곳에서 반환 값을 사용한다면 질의 함수를 호출하도록 바꾸고, 원래 함수를 호출하는 코드를 바로 아래 줄에 새로 추가한다. 하나 수정할 때마다 테스트한다. 
-5. 원래 함수에서 질의 관련 코드를 제거한다. 
-6. 테스트한다. 
+4. 원래 함수를 호출하는 곳을 모두 찾아낸다. 호출하는 곳에서 반환 값을 사용한다면 질의 함수를 호출하도록 바꾸고, 원래 함수를 호출하는 코드를 바로 아래 줄에 새로 추가한다. 하나 수정할 때마다 테스트한다.
+5. 원래 함수에서 질의 관련 코드를 제거한다.
+6. 테스트한다.
 
 ### 예시
 
 대상: 이름 목록을 훑어 악당을 찾는 함수  
 동작: 악당을 찾으면 그 사람의 이름을 반환하고 경고를 울린다.  
-비고: 가장 먼저 찾은 악당만 취급  
+비고: 가장 먼저 찾은 악당만 취급
 
 ```js
 --- 코드 ---
@@ -80,86 +80,88 @@ function alertForMiscreant(people) {
 ```
 
 1. 함수를 적절한 이름으로 바꿔준다.
-    ```js
-    // highlight-next-line
-    function findMiscreant(people) {
-        for (const p of people) {
-            if (p === "조커") {
-                setOffAlarms();
-                return "조커";
-            }
-            if (p === "사루만") {
-                setOffAlarms();
-                return "사루만";
-            }
-        }
-        return "";
-    }
-    ```
 
+   ```js
+   // highlight-next-line
+   function findMiscreant(people) {
+     for (const p of people) {
+       if (p === "조커") {
+         setOffAlarms();
+         return "조커";
+       }
+       if (p === "사루만") {
+         setOffAlarms();
+         return "사루만";
+       }
+     }
+     return "";
+   }
+   ```
 
-2. 변경을 하던 코드를 삭제한다. 
-    ```js
-    function findMiscreant(people) {
-        for (const p of people) {
-            if (p === "조커") {
-                // highlight-next-line
-                // setOffAlarms();
-                return "조커";
-            }
-            if (p === "사루만") {
-                // highlight-next-line
-                // setOffAlarms();
-                return "사루만";
-            }
-        }
-        return "";
-    }
-    ```
+2. 변경을 하던 코드를 삭제한다.
 
-3. 함수를 호출하는 곳에서 새로 추가된 함수를 호출한다. 
-    ```js
-    --- 변경 전 ---
-    const found = alertForMiscreant(people);
+   ```js
+   function findMiscreant(people) {
+     for (const p of people) {
+       if (p === "조커") {
+         // highlight-next-line
+         // setOffAlarms();
+         return "조커";
+       }
+       if (p === "사루만") {
+         // highlight-next-line
+         // setOffAlarms();
+         return "사루만";
+       }
+     }
+     return "";
+   }
+   ```
 
-    --- 변경 후 ---
-    const found = findMiscreant(people);
-    alertForMiscreant(people);
-    ```
+3. 함수를 호출하는 곳에서 새로 추가된 함수를 호출한다.
 
-4. 변경만 하는 코드를 만든다. 
-    ```js
-    function alertForMiscreant(people) {
-        for (const p of people) {
-            if (p === "조커") {
-                setOffAlarms();
-                return;
-            }
-            if (p === "사루만") {
-                setOffAlarms();
-                return;
-            }
-        }
-        return;
-    }
-    --- 혹은 ---
-    function alertForMiscreant(people) {
-        if (findMiscreant(people) !== "") setOffAlarms();
-    }
-    ```
+   ```js
+   --- 변경 전 ---
+   const found = alertForMiscreant(people);
+
+   --- 변경 후 ---
+   const found = findMiscreant(people);
+   alertForMiscreant(people);
+   ```
+
+4. 변경만 하는 코드를 만든다.
+   ```js
+   function alertForMiscreant(people) {
+       for (const p of people) {
+           if (p === "조커") {
+               setOffAlarms();
+               return;
+           }
+           if (p === "사루만") {
+               setOffAlarms();
+               return;
+           }
+       }
+       return;
+   }
+   --- 혹은 ---
+   function alertForMiscreant(people) {
+       if (findMiscreant(people) !== "") setOffAlarms();
+   }
+   ```
 
 ## 2. 함수 매개변수화하기
 
-두 함수의 로직이 아주 비슷하고 단지 리터럴 값만 다르다면, 그 다른 값만 배개변수로 받아 처리하는 함수 하나로 합쳐서 중복을 없앨 수 있다. 그렇게 되면 매개변수 값만 바꿔서 해당 함수를 다른 곳에서 더 활용할 수 있다. 
+두 함수의 로직이 아주 비슷하고 단지 리터럴 값만 다르다면, 그 다른 값만 배개변수로 받아 처리하는 함수 하나로 합쳐서 중복을 없앨 수 있다. 그렇게 되면 매개변수 값만 바꿔서 해당 함수를 다른 곳에서 더 활용할 수 있다.
 
 ### 절차
 
-1. 비슷한 함수 중 하나를 선택한다. 
-2. 함수 선언 바꾸기로 리터럴들을 배개변수로 추가한다. 
-3. 이 함수를 호출하는 곳 모두에 적절한 리터럴 값을 추가한다. 
-4. 테스트한다. 
-5. 매개변수로 받은 값을 사용하도록 함수 본문을 수정한다. 하나 수정할 때마다 테스트한다. 
-6. 비슷한 다른 함수를 호출하는 코드를 찾아 매개변수화된 함수를 호출하도록 하나씩 수정한다. 하나 수정할 때마다 테스트한다. 
+1. 비슷한 함수 중 하나를 선택한다.
+2. 함수 선언 바꾸기로 리터럴들을 배개변수로 추가한다.
+3. 이 함수를 호출하는 곳 모두에 적절한 리터럴 값을 추가한다.
+4. 테스트한다.
+5. 매개변수로 받은 값을 사용하도록 함수 본문을 수정한다. 하나 수정할 때마다 테스트한다.
+6. 비슷한 다른 함수를 호출하는 코드를 찾아 매개변수화된 함수를 호출하도록 하나씩 수정한다. 하나 수정할 때마다 테스트한다.
 
 ### 예시
 
@@ -180,101 +182,101 @@ function raise(aPerson, factor) {
 ```
 
 복잡한 경우
+
 ```js
 function baseCharge(usage) {
-    if (usage < 0) return usd(0);
-    const amount = 
-        bottomBand(usage) * 0.03
-        + middleBand(usage) * 0.05
-        + topBand(usage) * 0.07;
-    return usd(amount);
+  if (usage < 0) return usd(0);
+  const amount =
+    bottomBand(usage) * 0.03 + middleBand(usage) * 0.05 + topBand(usage) * 0.07;
+  return usd(amount);
 }
 function bottomBand(usage) {
-    return Math.min(usage, 100);
+  return Math.min(usage, 100);
 }
 function middleBand(usage) {
-    return usage > 100 ? Math.min(usage, 200) - 100 : 0;
+  return usage > 100 ? Math.min(usage, 200) - 100 : 0;
 }
 function topBand(usage) {
-    return usage > 200 ? usage - 200 : 0;
+  return usage > 200 ? usage - 200 : 0;
 }
 ```
 
-대역(Band)을 다루는 조금 복잡한 함수다. 
+대역(Band)을 다루는 조금 복잡한 함수다.
 
-1. 이런 식의 범위를 나타내는 함수들의 경우엔 중간 함수부터 리펙터링하는 것이 더 좋다. 
-    ```js
-    function withinBand(usage, bottom, top) {
-        return usage > 100 ? Math.min(usage, 200) - 100 : 0;
-    }
-    function baseCharge(usage) {
-        if (usage < 0) return usd(0);
-        const amount = 
-            bottomBand(usage) * 0.03
-            // highlight-next-line
-            + withinBand(usage, 100, 200) * 0.05
-            + topBand(usage) * 0.07;
-        return usd(amount);
-    }
-    ```
+1. 이런 식의 범위를 나타내는 함수들의 경우엔 중간 함수부터 리펙터링하는 것이 더 좋다.
 
-2. 함수 내의 리터럴(100, 200)을 적절한 매개변수로 바꾼다. 
+   ```js
+   function withinBand(usage, bottom, top) {
+     return usage > 100 ? Math.min(usage, 200) - 100 : 0;
+   }
+   function baseCharge(usage) {
+     if (usage < 0) return usd(0);
+     const amount =
+       bottomBand(usage) * 0.03 +
+       // highlight-next-line
+       withinBand(usage, 100, 200) * 0.05 +
+       topBand(usage) * 0.07;
+     return usd(amount);
+   }
+   ```
 
-    ```js
-    function withinBand(usage, bottom, top) {
-        return usage > bottom ? Math.min(usage, top) - bottom : 0;
-    }
-    ```
+2. 함수 내의 리터럴(100, 200)을 적절한 매개변수로 바꾼다.
+
+   ```js
+   function withinBand(usage, bottom, top) {
+     return usage > bottom ? Math.min(usage, top) - bottom : 0;
+   }
+   ```
 
 3. 이제 다 바꾼다.
 
-    ```js
-    function baseCharge(usage) {
-        if (usage < 0) return usd(0);
-        const amount = 
-            // highlight-next-line
-            withinBand(usage, 0, 100) * 0.03
-            + withinBand(usage, 100, 200) * 0.05
-            // highlight-next-line
-            + withinBand(usage, 200, Infinity) * 0.07; // 상한 호출의 경우 Infinity 사용
-        return usd(amount);
-    }
-    ```
+   ```js
+   function baseCharge(usage) {
+     if (usage < 0) return usd(0);
+     const amount =
+       // highlight-next-line
+       withinBand(usage, 0, 100) * 0.03 +
+       withinBand(usage, 100, 200) * 0.05 +
+       // highlight-next-line
+       withinBand(usage, 200, Infinity) * 0.07; // 상한 호출의 경우 Infinity 사용
+     return usd(amount);
+   }
+   ```
 
 ## 3. 플래그 인수 제거하기
 
-플래그 인수란 호출되는 함수가 실행할 로직을 호출하는 쪽에서 선택하기 위해 전달하는 인수 
+플래그 인수란 호출되는 함수가 실행할 로직을 호출하는 쪽에서 선택하기 위해 전달하는 인수
 
 예:
 
 ```js
 function bookConcert(aCutomer, isPremium) {
-    if (isPremium) {
-        // do something
-    } else {
-        // do something else
-    }
+  if (isPremium) {
+    // do something
+  } else {
+    // do something else
+  }
 }
 ```
 
 위의 코드 같이 플래그로 인해 동작 방식이 달라지는 경우, 어떻게 호출해야 하는지 이해하기가 어려워진다.  
-어떤 함수를 사용해야는지 명확하게 알 수 없을 수도 있고, 알아냈다고 하더라도 플래그로 어떤 값을 넘겨야하는지 또 알아내야 한다. 
+어떤 함수를 사용해야는지 명확하게 알 수 없을 수도 있고, 알아냈다고 하더라도 플래그로 어떤 값을 넘겨야하는지 또 알아내야 한다.
 
 ```js
 bookConcert(aCustomer, true); // 여기서 true 의 의미가 무엇인지?
 
-// 차라리 명시적인 함수를 호출하는 것이 더 낫다. 
+// 차라리 명시적인 함수를 호출하는 것이 더 낫다.
 premiumBookConcert(aCustomer);
 ```
 
 만약 하나의 함수에서 두개 이상의 플래그를 사용하고 있다면 어쩌면 플래그 인수를 써야하는 합당한 근거가 될 수도 있다.  
 왜냐하면 플래그의 수만큼 다른 함수가 존재해야 하기 때문.  
-그러나 반대로 해당 함수 하나가 너무 많은 일을 하고 있는 것일 수도 있다.  
+그러나 반대로 해당 함수 하나가 너무 많은 일을 하고 있는 것일 수도 있다.
 
 ### 절차
 
 1. 매개변수로 주어질 수 있는 값 각각에 대응하는 명시적 함수들을 생성한다.
-2. 원래 함수를 호출하는 코드들을 모두 찾아서 각 리터럴 값에 대응되는 명시적 함수를 호출하도록 수정한다. 
+2. 원래 함수를 호출하는 코드들을 모두 찾아서 각 리터럴 값에 대응되는 명시적 함수를 호출하도록 수정한다.
 
 ### 예시
 
@@ -287,52 +289,52 @@ aShipment.deliveryDate = deliveryDate(anOrder, false);
 
 ```js
 function deliveryDate(anOrder, isRush) {
-    if (isRush) {
-        let deliveryTime;
-        if (['MA', 'CT'].includes(anOrder.deliveryState)) deliveryTime = 1;
-        else if (['NY', 'NH'].includes(anOrder.deliveryState)) deliveryTime = 2;
-        else deliveryTime = 3;
-        return anOrder.placedOn.plusDays(1 + deliveryTime);
-    } else {
-        if (['MA', 'CT', 'NY'].includes(anOrder.deliveryState)) deliveryTime = 2;
-        else if (['ME', 'NH'].includes(anOrder.deliveryState)) deliveryTime = 3;
-        else deliveryTime = 4;
-        return anOrder.placedOn.plusDays(2 + deliveryTime);
-    }
+  if (isRush) {
+    let deliveryTime;
+    if (["MA", "CT"].includes(anOrder.deliveryState)) deliveryTime = 1;
+    else if (["NY", "NH"].includes(anOrder.deliveryState)) deliveryTime = 2;
+    else deliveryTime = 3;
+    return anOrder.placedOn.plusDays(1 + deliveryTime);
+  } else {
+    if (["MA", "CT", "NY"].includes(anOrder.deliveryState)) deliveryTime = 2;
+    else if (["ME", "NH"].includes(anOrder.deliveryState)) deliveryTime = 3;
+    else deliveryTime = 4;
+    return anOrder.placedOn.plusDays(2 + deliveryTime);
+  }
 }
 ```
 
-1. 위는 전형적인 플래그 함수라고 볼 수 있는데 이런 경우, 조건문 분해하기를 적용할 수 있다. 
+1. 위는 전형적인 플래그 함수라고 볼 수 있는데 이런 경우, 조건문 분해하기를 적용할 수 있다.
 
-    ```js
-    function deliveryDate(anOrder, isRush) {
-        if (isRush) return rushDeliveryDate(anOrder);
-        else return regularDeliveryDate(anOrder);
-    }
-    function rushDeliveryDate(anOrder) {
-        let deliveryTime;
-        if (['MA', 'CT'].includes(anOrder.deliveryState)) deliveryTime = 1;
-        else if (['NY', 'NH'].includes(anOrder.deliveryState)) deliveryTime = 2;
-        else deliveryTime = 3;
-        return anOrder.placedOn.plusDays(1 + deliveryTime);
-    }
-    function regularDeliveryDate(anOrder) {
-        let deliveryTime;
-        if (['MA', 'CT', 'NY'].includes(anOrder.deliveryState)) deliveryTime = 2;
-        else if (['ME', 'NH'].includes(anOrder.deliveryState)) deliveryTime = 3;
-        else deliveryTime = 4;
-        return anOrder.placedOn.plusDays(2 + deliveryTime);
-    }
-    ```
+   ```js
+   function deliveryDate(anOrder, isRush) {
+     if (isRush) return rushDeliveryDate(anOrder);
+     else return regularDeliveryDate(anOrder);
+   }
+   function rushDeliveryDate(anOrder) {
+     let deliveryTime;
+     if (["MA", "CT"].includes(anOrder.deliveryState)) deliveryTime = 1;
+     else if (["NY", "NH"].includes(anOrder.deliveryState)) deliveryTime = 2;
+     else deliveryTime = 3;
+     return anOrder.placedOn.plusDays(1 + deliveryTime);
+   }
+   function regularDeliveryDate(anOrder) {
+     let deliveryTime;
+     if (["MA", "CT", "NY"].includes(anOrder.deliveryState)) deliveryTime = 2;
+     else if (["ME", "NH"].includes(anOrder.deliveryState)) deliveryTime = 3;
+     else deliveryTime = 4;
+     return anOrder.placedOn.plusDays(2 + deliveryTime);
+   }
+   ```
 
-2. 호출하는 쪽을 바꿔준다. 
+2. 호출하는 쪽을 바꿔준다.
 
-    ```js
-    aShipment.deliveryDate = rushDeliveryDate(anOrder);
-    aShipment.deliveryDate = regularDeliveryDate(anOrder);
-    ```
+   ```js
+   aShipment.deliveryDate = rushDeliveryDate(anOrder);
+   aShipment.deliveryDate = regularDeliveryDate(anOrder);
+   ```
 
-3. `deliveryDate(anOrder, isRush)` 함수를 제거한다. 
+3. `deliveryDate(anOrder, isRush)` 함수를 제거한다.
 
 _만약, 매개변수가 훨씬 까다로운 형태로 존재한다면 해당 함수를 한번 감싸는 것만으로도 도움이 된다._
 
@@ -359,22 +361,23 @@ if (aPlan.withinRange(aRoom.daysTempRange))
 
 ### 절차
 
-1. 매개변수들을 원하는 형태로 받는 빈 함수를 만든다. 
-2. 새 함수의 본문에서는 원래 함수를 호출하도록 하며, 새 매개변수와 원래 함수의 매개변수를 매핑한다. 
-3. 정적 검사를 수행한다. 
-4. 모든 호출자가 새 함수를 사용하게 수정한다. 하나씩 수정하며 테스트하자. 
-5. 호출자를 모두 수정했다면 원래 함수를 인라인한다. 
-6. 새 함수의 이름을 적절히 수정하고 모든 호출자에 반영한다. 
+1. 매개변수들을 원하는 형태로 받는 빈 함수를 만든다.
+2. 새 함수의 본문에서는 원래 함수를 호출하도록 하며, 새 매개변수와 원래 함수의 매개변수를 매핑한다.
+3. 정적 검사를 수행한다.
+4. 모든 호출자가 새 함수를 사용하게 수정한다. 하나씩 수정하며 테스트하자.
+5. 호출자를 모두 수정했다면 원래 함수를 인라인한다.
+6. 새 함수의 이름을 적절히 수정하고 모든 호출자에 반영한다.
 
 ### 예시
 
 실내 온도 모니터링 시스템  
-일일 최저 | 최고 기온이 난방 계획에서 정한 범위를 벗어나는지 확인한다. 
+일일 최저 | 최고 기온이 난방 계획에서 정한 범위를 벗어나는지 확인한다.
 
 ```js
 const low = aRoom.daysTempRange.low;
 const high = aRoom.daysTempRange.high;
-if (!aPlan.withinRange(low, high)) alerts.push("방 온도가 지정 범위를 벗어났습니다")
+if (!aPlan.withinRange(low, high))
+  alerts.push("방 온도가 지정 범위를 벗어났습니다");
 ```
 
 ```js
@@ -384,60 +387,62 @@ withinRange(bottom, top) {
 }
 ```
 
-1. 가장 먼저 원하는 인터페이스를 갖춘 빈 메서드를 만든다. 
+1. 가장 먼저 원하는 인터페이스를 갖춘 빈 메서드를 만든다.
 
-    ```js
-    // HeatingPlan class
-    xxNEWwithinRange(aNumberRange) {}
-    ```
+   ```js
+   // HeatingPlan class
+   xxNEWwithinRange(aNumberRange) {}
+   ```
 
-2. 기존 메서드를 호출하는 코드로 채운다. 
+2. 기존 메서드를 호출하는 코드로 채운다.
 
-    ```js
-    // HeatingPlan class
-    xxNEWwithinRange(aNumberRange) {
-        return this.withinRange(aNumberRange.low, aNumberRange.high);
-    }
-    ```
+   ```js
+   // HeatingPlan class
+   xxNEWwithinRange(aNumberRange) {
+       return this.withinRange(aNumberRange.low, aNumberRange.high);
+   }
+   ```
 
-3. 기존 함수를 호출하는 코드를 찾아서 새 함수를 호출하게 한다. 
+3. 기존 함수를 호출하는 코드를 찾아서 새 함수를 호출하게 한다.
 
-    ```js
-    const low = aRoom.daysTempRange.low;
-    const high = aRoom.daysTempRange.high;
-    if (!aPlan.xxNEWwithinRange(aRoom.daysTempRange)) alerts.push("방 온도가 지정 범위를 벗어났습니다")
-    ```
+   ```js
+   const low = aRoom.daysTempRange.low;
+   const high = aRoom.daysTempRange.high;
+   if (!aPlan.xxNEWwithinRange(aRoom.daysTempRange))
+     alerts.push("방 온도가 지정 범위를 벗어났습니다");
+   ```
 
-4. 필요 없는 부분을 삭제한다. 
+4. 필요 없는 부분을 삭제한다.
 
-    ```js
-    // const low = aRoom.daysTempRange.low;
-    // const high = aRoom.daysTempRange.high;
-    if (!aPlan.xxNEWwithinRange(aRoom.daysTempRange)) alerts.push("방 온도가 지정 범위를 벗어났습니다")
-    ```
+   ```js
+   // const low = aRoom.daysTempRange.low;
+   // const high = aRoom.daysTempRange.high;
+   if (!aPlan.xxNEWwithinRange(aRoom.daysTempRange))
+     alerts.push("방 온도가 지정 범위를 벗어났습니다");
+   ```
 
-5. 원래 함수를 인라인한다. 
+5. 원래 함수를 인라인한다.
 
-    ```js
-    // HeatingPlan class
-    xxNEWwithinRange(aNumberRange) {
-        return (aNumberRange.low >= this._temperatureRange.low) && (aNumberRange.high <= this._temperatureRange.high);
-    }
-    ```
+   ```js
+   // HeatingPlan class
+   xxNEWwithinRange(aNumberRange) {
+       return (aNumberRange.low >= this._temperatureRange.low) && (aNumberRange.high <= this._temperatureRange.high);
+   }
+   ```
 
-6. 함수 이름 바꾼다. 
+6. 함수 이름 바꾼다.
 
-    ```js
-    // HeatingPlan class
-    withinRange(aNumberRange) {
-        return (aNumberRange.low >= this._temperatureRange.low) && (aNumberRange.high <= this._temperatureRange.high);
-    }
-    ```
+   ```js
+   // HeatingPlan class
+   withinRange(aNumberRange) {
+       return (aNumberRange.low >= this._temperatureRange.low) && (aNumberRange.high <= this._temperatureRange.high);
+   }
+   ```
 
 ## 5. 매개변수를 질의 함수로 바꾸기
 
 매개변수 목록은 함수의 변동 요인을 모아놓은 곳이다.  
-따라서 중복은 피하는게 좋으며, 짧을수록 이해하기 쉽다. 
+따라서 중복은 피하는게 좋으며, 짧을수록 이해하기 쉽다.
 
 피호출 함수가 값을 스스로 결정할 수 있다면, 값을 결정하는 주체가 피호출 함수가 되도록 하자.
 
@@ -458,9 +463,9 @@ function availableVacation(anEmployee) {
 
 ### 절차
 
-1. 필요하다면 대상 매개변수의 값을 계산하는 코드를 별도 함수로 추출해놓는다. 
-2. 함수 본문에서 대상 매개변수로의 참조를 모두 찾아서 그 매개변수의 값을 만들어주는 표현식을 참조하도록 바꾼다. 
-3. 함수 선언 바꾸기로 대상 매개변수를 없앤다. 
+1. 필요하다면 대상 매개변수의 값을 계산하는 코드를 별도 함수로 추출해놓는다.
+2. 함수 본문에서 대상 매개변수로의 참조를 모두 찾아서 그 매개변수의 값을 만들어주는 표현식을 참조하도록 바꾼다.
+3. 함수 선언 바꾸기로 대상 매개변수를 없앤다.
 
 ### 예시
 
@@ -481,7 +486,7 @@ discountedPrice(basePrice, discountLevel) {
 }
 ```
 
-1. `discountLevel` 와 같은 임시 변수는 질의 함수로 바꿔준다. 
+1. `discountLevel` 와 같은 임시 변수는 질의 함수로 바꿔준다.
 
 ```js
 get discountLevel() {
@@ -509,21 +514,21 @@ discountedPrice(basePrice) {
 
 코드를 읽다보면 함수 안에 두기엔 거북한 참조를 발견할 때가 있다.  
 전역 변수를 참조한다거나 제거하길 원하는 원소를 참조하는 경우가 여기 속한다.  
-이럴 땐 해당 참조를 매개변수로 바꿔 해결할 수 있다. 
+이럴 땐 해당 참조를 매개변수로 바꿔 해결할 수 있다.
 
 똑같은 값을 건네면 매번 똑같은 결과를 내는 함수가 다루기가 쉽다.  
 이런 성질을 `참조 투명성`이라고 한다.  
-참조 투명하지 않은 원소에 접근하는 모든 함수는 참조 투명성을 잃게 된다. 
+참조 투명하지 않은 원소에 접근하는 모든 함수는 참조 투명성을 잃게 된다.
 
-이러한 리펙터링을 하게되면 매개변수로 어떤 값을 제공해야하는지 호출자가 알아내야 한다는 단점이 존재한다. 
+이러한 리펙터링을 하게되면 매개변수로 어떤 값을 제공해야하는지 호출자가 알아내야 한다는 단점이 존재한다.
 
 ### 절차
 
-1. 변수 추출하기로 질의 코드를 함수 본문의 나머지 코드와 분리한다. 
-2. 함수 본문 중 해당 질의를 호출하지 않는 코드들을 별도 함수로 추출한다. 
-3. 방금 만든 변수를 인라인하여 제거한다. 
-4. 원래 함수도 인라인한다. 
-5. 새 함수의 이름을 원래 함수의 이름으로 고쳐준다. 
+1. 변수 추출하기로 질의 코드를 함수 본문의 나머지 코드와 분리한다.
+2. 함수 본문 중 해당 질의를 호출하지 않는 코드들을 별도 함수로 추출한다.
+3. 방금 만든 변수를 인라인하여 제거한다.
+4. 원래 함수도 인라인한다.
+5. 새 함수의 이름을 원래 함수의 이름으로 고쳐준다.
 
 ### 예시
 
@@ -546,7 +551,7 @@ else setOff();
 
 `targetTemperature()` 메서드가 전역 객체인 `thermostat`에 의존한다는 것이 거슬린다. 매개변수로 옮겨서 의존성을 끊어보자.
 
-1. 변수 추출하기를 이용하여 메서드에서 사용할 매개변수를 준비한다. 
+1. 변수 추출하기를 이용하여 메서드에서 사용할 매개변수를 준비한다.
 
 ```js
 get targetTemperature() {
@@ -557,7 +562,7 @@ get targetTemperature() {
 }
 ```
 
-2. 매개변수의 값을 질의하는 부분 외의 나머지 코드를 메서드로 추출한다. 
+2. 매개변수의 값을 질의하는 부분 외의 나머지 코드를 메서드로 추출한다.
 
 ```js
 xxNEWtargetTemperature(selectedTemperature) {
@@ -567,7 +572,7 @@ xxNEWtargetTemperature(selectedTemperature) {
 }
 ```
 
-3. 원래 메서드를 단순한 호출로 바꾼다. 
+3. 원래 메서드를 단순한 호출로 바꾼다.
 
 ```js
 get targetTemperature() {
@@ -576,8 +581,8 @@ get targetTemperature() {
 }
 ```
 
-4. 이어서 메서드를 인라인한다. 
-5. 이름을 바꿔준다. 
+4. 이어서 메서드를 인라인한다.
+5. 이름을 바꿔준다.
 
 ```js
 --- 호출부 ---
