--- a/docs/16_chapter_11-2.mdx
+++ b/docs/16_chapter_11-2.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 import Authors from "./Authors.tsx";
 
-# 11 장 API 리펙터링 下
+# 11 장 API 리팩터링 下
 
 <Authors bookLeader="saengmotmi" />
 
